# dag-cache

./: .gitignore  Cargo.toml  Readme.md  build-dag-cache  build-dag-store  build-notes-frontend  build-notes-server  build.rs  docker-compose.yml  grpcui.sh  run_local  run_local_tmp
client/: .gitignore  package.yaml
client/src/: Lib.hs
dag-cache/: Cargo.toml  Dockerfile
dag-cache-types/: Cargo.toml  build.rs
dag-cache-types/proto/: dagstore.proto  ipfs_cache.proto
dag-cache-types/src/types/: api.rs  encodings.rs  errors.rs  grpc.rs  ipfs.rs  mod.rs  validated_tree.rs
dag-cache/src/: README.md  bin.rs  lib.rs  opts.rs  utils.rs
dag-cache/src/capabilities/: cache.rs  fs_ipfs_store.rs  fs_store.rs  ipfs_store.rs  lib.rs  lru_cache.rs  mod.rs  runtime.rs  store.rs
dag-cache/src/server/: app.rs  batch_get.rs  batch_put.rs  mod.rs  opportunistic_get.rs
dag-cache/src/types/: api.rs  errors.rs  ipfs.rs  mod.rs  validated_tree.rs
dag-store/: .gitignore  Cargo.toml
dag-store-types/: Cargo.toml  build.rs
dag-store-types/proto/: dagstore.proto
dag-store-types/src/: lib.rs
dag-store-types/src/types/: api.rs  domain.rs  encodings.rs  errors.rs  grpc.rs  mod.rs  validated_tree.rs
dag-store/src/: bin.rs  client.rs  lib.rs  opts.rs
dag-store/src/capabilities/: cache.rs  mod.rs  store.rs
dag-store/src/client/: bin.rs  mod.rs
dag-store/src/client/util/: mod.rs
dag-store/src/server/: app.rs  batch_get.rs  batch_put.rs  mod.rs  opportunistic_get.rs
dag-store/src/server/batch_get/: js_filter.rs
docker/: .gitignore  docker-compose.yml
docker/dag-store/: Dockerfile
docs/: capabilities_style.md
headless-chrome-test/: Cargo.toml
headless-chrome-test/src/: main.rs
notes-frontend/: .gitignore  Cargo.toml  build.rs
notes-frontend/src/: lib.rs  main.rs
notes-frontend/static/: index.html  tree.css
notes-frontend/wasm/: Cargo.toml
notes-frontend/wasm/src/: lib.rs  main.rs
notes-frontend/wasm/static/: tree.css
notes-server/: .gitignore  Cargo.toml  Dockerfile
notes-server/src/: main.rs  opts.rs
notes-types/: Cargo.toml
notes-types/src/: api.rs  commits.rs  lib.rs  notes.rs
proto/: ipfs_cache.proto
server/: Cargo.toml
server/docs/: capabilities_style.md
server/proto/: ipfs_cache.proto
server/src/: api.rs  api_types.rs  batch_fetch.rs  batch_upload.rs  cache.rs  capabilities.rs  encoding_types.rs  error_types.rs  graph_cache.rs  in_mem_types.rs  ipfs_api.rs  ipfs_types.rs  lib.rs  main.rs  server.rs  types.rs
server/src/capabilities/: lib.rs  lru_cache.rs  mod.rs  runtime.rs
server/src/server/: app.rs  batch_fetch.rs  batch_put.rs  batch_upload.rs  mod.rs  opportunistic_get.rs
server/src/types/: api.rs  ipfs.rs  validated_tree.rs
src/: api_types.rs  in_mem_types.rs  ipfs_api.rs  ipfs_io.rs  ipfs_types.rs  lib.rs  main.rs  opts.rs  types.rs
src/capabilities/: ipfs_store.rs  lib.rs  lru_cache.rs  mod.rs  runtime.rs  telemetry.rs  telemetry_subscriber.rs
src/server/: app.rs  batch_get.rs  batch_put.rs  mod.rs  opportunistic_get.rs
src/types/: api.rs  encodings.rs  errors.rs  grpc.rs  ipfs.rs  mod.rs  validated_tree.rs
