[package]
name = "dag-cache"
version = "0.1.0"
authors = ["pk <pkinsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# test only
rand = "0.7"

tracing = "0.1.8"
tracing-futures = "0.0.1-alpha.1"
tracing-subscriber = "0.1"

lru = "0.1"
base64 = "0.10.1"
base58 = "0.1.0"
reqwest = "0.9"
petgraph = "0.4.13" # not currently used, will be used for graph structure cache
structopt = "0.2"
chashmap = "2.2"
hashbrown = "0.6.*"


futures = "0.1"
bytes = "0.4"
http = "0.1"
prost = "0.5"
tokio = "0.1"
tower-hyper = "0.1"
hyper = "0.12"
tower-grpc = { version = "0.1", features = ["tower-hyper"] }
tower-service = "0.2"
tower-util = "0.1"

serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"

[build-dependencies]
tower-grpc-build = { version = "0.1",  features = ["tower-hyper"]  }