[package]
name = "dag-cache"
version = "0.1.0"
authors = ["pk <pkinsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# test only
rand = "0.7"

tracing = "0.1.9"
tracing-core = "0.1.7"
tracing-futures = {version = "0.1.0", features = ["futures-preview", "tokio-alpha"]}
tracing-subscriber = "0.1"
tracing-attributes = "0.1.4"


lru = "0.1"
base64 = "0.10.1"
base58 = "0.1.0"
reqwest = {version = "0.10.0-alpha.1", features = ["json", "default-tls"]}
petgraph = "0.4.13" # not currently used, will be used for graph structure cache
structopt = "0.2"
chashmap = "2.2"
hashbrown = "0.6.*"

# switching to async via compat mb?
futures-preview = { version = "0.3.0-alpha.14", features = ["compat"] }

bytes = "0.4"
http = "0.1"
prost = "0.5"
prost-derive = "0.5"

tokio = "0.2.0-alpha.6"

# tokio = "0.1"
tower-hyper = "0.1"
hyper = "0.12"
tonic = "0.1.0-alpha.3"

tower-service = "0.2"
tower-util = "0.1"

serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"

# metrics!
libhoney-rust = "0.1.3"
chrono = "0.4.9" # used for honeycomb.io timestamp

[build-dependencies]
# tower-grpc-build = { version = "0.1",  features = ["tower-hyper"]  }
tonic-build = "0.1.0-alpha.3"