[package]
name = "dag-cache-types"
version = "0.1.0"
authors = ["pk <pkinsky@gmail.com>"]
edition = "2018"

[features]
grpc = ["prost", "prost-derive", "tonic"]

minimal = []

[dependencies]
base64 = "0.10.1"
base58 = "0.1.0"
bytes = "0.4"

prost = {version = "0.5", optional = true }
prost-derive = {version = "0.5", optional = true }
tonic = { version = "0.1.0-alpha.6", features = [], optional = true }

serde = { version = "1.0.91", features = ["derive"] }

[dev-dependencies]
rand = "0.7"

[build-dependencies]

tonic-build = { version = "0.1.0-alpha.6", features = ["transport"], default-features = false }