[package]
name = "dag-cache"
version = "0.1.0"
authors = ["pk <pkinsky@gmail.com>"]
edition = "2018"


[[bin]]
name = "dag-cache"
path = "src/bin.rs"

[dependencies]
tracing = "0.1.9" 
tracing-core = "0.1.7"
tracing-futures = {version = "0.1.0", features = ["futures-preview", "tokio-alpha"]}
# tracing-subscriber = "0.1"
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing/" }
tracing-attributes = "0.1.4"

lru = "0.1"
base64 = "0.10.1"
base58 = "0.1.0"
reqwest = {version = "0.10.0-alpha.1", features = ["json", "default-tls"]}
structopt = "0.2"
chashmap = "2.2"

async-trait = "0.1.18"

# switching to async via compat mb?
futures-preview = { version = "0.3.0-alpha.14", features = ["compat"] }
bytes = "0.4"

prost = "0.5"
prost-derive = "0.5"

tokio = "0.2.0-alpha.6"
tower-hyper = "0.1"
hyper = "0.12"
tonic = "0.1.0-alpha.6"

tower-service = "0.2"
tower-util = "0.1"

sled = "0.29.2"

serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"

dag-cache-types = { path = "../dag-cache-types", features = ["grpc"] }

honeycomb-tracing = { git = "https://github.com/pkinsky/honeycomb-tracing", branch = "v2" }
# honeycomb-tracing = "0.0.1"
libhoney-rust = "0.1.3"

blake2 = "0.8.1"

[dev-dependencies]
rand = "0.7"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3