[package]
name = "dag-store-types"
version = "0.1.0"
authors = ["inanna malick <inanna@recursion.wtf>"]
edition = "2018"

[features]
grpc = ["prost", "prost-derive", "tonic"]

minimal = []

[dependencies]
base64 = "0.10.1"
base58 = "0.1.0"
bytes = "0.4"
generic-array = "0.14.4"
prost = {version = "0.8", optional = true }
prost-derive = {version = "0.8", optional = true }
tonic = { version = "0.5.1", features = ["compression"], optional = true}
serde = { version = "1.0.91", features = ["derive"] }
blake2 = "0.9.2"
slice_as_array = "1.1.0"

[dev-dependencies]
rand = "0.7"

[build-dependencies]
# TODO: not sure why this is causing it to not find compile_protos
# tonic-build = { version = "0.1.1", features = ["transport"], default-features = false }
tonic-build = { version = "0.5.2", features = ["compression"] }