[package]
name = "dag-store-types"
version = "0.1.0"
authors = ["inanna malick <inanna@recursion.wtf>"]
edition = "2018"

[features]
grpc = ["prost", "prost-derive", "tonic"]
# test = ["serde_json"]
minimal = []

[dependencies]
base58 = "0.1.0"
bytes = "0.4"
prost = {version = "0.11", optional = true }
prost-derive = {version = "0.11", optional = true }
tonic = { version = "0.8", features = [], optional = true }
serde = { version = "1.0.91", features = ["derive"] }
blake3 = "0.1"
slice_as_array = "1.1.0"
# serde_json = {version = "1.0.39", optional = true }
serde_json = {version = "1.0.39"}

recursion-schemes = {path = "../../recursion/recursion-schemes", version = "0.1.3"}

[dev-dependencies]
rand = "0.7"

[build-dependencies]

tonic-build = { version = "0.8", features = ["transport", "prost"], default-features = false }
