[package]
name = "dag-store"
version = "0.1.0"
authors = ["inanna malick <inanna@recursion.wtf>"]
edition = "2018"


[[bin]]
name = "dag-store"
path = "src/bin.rs"

[dependencies]
tracing = "0.1.9" 
tracing-core = "0.1.7"
tracing-futures = "0.2.2"
tracing-subscriber = "0.2.1"
tracing-attributes = "0.1.4"

lru = "0.6"
base64 = "0.10.1"
base58 = "0.1.0"
structopt = "0.2"
chashmap = "2.2"

async-trait = "0.1.18"

# switching to async via compat mb?
futures = "0.3.4"

bytes = "0.4"

prost = "0.8"
prost-derive = "0.8"

tokio = { version = "1.11", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.5.2", features = ["compression"]}

tower-service = "0.2"
tower-util = "0.1"

sled = "0.31"

serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"

dag-store-types = { path = "../dag-store-types", features = ["grpc"] }

tracing-honeycomb = "0.1.0"
libhoney-rust = "0.1.3"

[dev-dependencies]
rand = "0.7"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
