[package]
name = "notes-server"
version = "0.1.0"
authors = ["pk <pkinsky@gmail.com>"]
edition = "2018"

[dependencies]
dag-cache = { path = "../dag-cache" }

warp = { git = "https://github.com/seanmonstar/warp" }
tokio = "0.2.0-alpha.6"
tokio-executor = "=0.2.0-alpha.6"
tonic = "0.1.0-alpha.6"
serde = "1.0"
serde_json = "1.0"

futures-preview = { version = "0.3.0-alpha.14", features = ["compat"] }
