[package]
name = "notes-server"
version = "0.1.0"
authors = ["pk <pkinsky@gmail.com>"]
edition = "2018"

[dependencies]
dag-store = { path = "../dag-store" }
notes-frontend = { path = "../notes-frontend" }

warp = { git = "https://github.com/seanmonstar/warp" }
tokio = "0.2.0-alpha.6"
tokio-executor = "=0.2.0-alpha.6"
tonic = "0.1.0-alpha.6"
serde = "1.0"
serde_json = "1.0"

mime_guess = "2.0"

handlebars = "1.0.0"

# following 3 only used for static wasm/etc serving, could be moved to that crate
hyper = "0.13.0-alpha.4"
headers = "0.2.3"
bytes = "0.5.3"

dag-store-types = { path = "../dag-store-types", features = ["grpc"]}
notes-types = { path = "../notes-types"}

futures-preview = { version = "0.3.0-alpha.14", features = ["compat"] }

prost = "0.5"
tracing = "0.1.9" 
tracing-core = "0.1.7"
tracing-futures = {version = "0.1.0", features = ["futures-preview", "tokio-alpha"]}
tracing-subscriber = "0.2.0-alpha.2"
tracing-attributes = "0.1.4"

honeycomb-tracing = { git = "https://github.com/pkinsky/honeycomb-tracing", branch = "v2" }
libhoney-rust = "0.1.3"

structopt = "0.2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3