[package]
name = "notes-server"
version = "0.1.0"
authors = ["inanna malick <inanna@recursion.wtf>"]
edition = "2018"


[features]
embed-wasm = ["notes-frontend"]

minimal = []

[dependencies]
dag-store = { path = "../dag-store" }
notes-frontend = { path = "../notes-frontend", optional = true }

warp = "0.2.1"
tokio = { version = "0.2", features = ["macros"] }
tonic = "0.1.1"
serde = "1.0"
serde_json = "1.0"

mime_guess = "2.0"

handlebars = "1.0.0"

# following 3 only used for static wasm/etc serving, could be moved to that crate later
hyper = "0.13.2"
headers = "0.3.1"
bytes = "0.5.3"

dag-store-types = { path = "../dag-store-types", features = ["grpc"]}
notes-types = { path = "../notes-types"}

futures = "0.3.4"

prost = "0.5"
tracing = "0.1.9" 
tracing-core = "0.1.7"
tracing-futures = "0.2.2"
tracing-subscriber = "0.2.1"
tracing-attributes = "0.1.4"

tracing-honeycomb = "0.1.0"
libhoney-rust = "0.1.3"

structopt = "0.2"


[dev-dependencies]
dag-store = { path = "../dag-store"}
tempdir = "0.3.7"
headless_chrome = "0.9"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
