[package]
name = "dag-cache"
version = "0.1.0"
authors = ["pk <pkinsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
actix-web = "1.0.7"
lru = "0.1.17"
serde = "1.0.19"
futures = "0.1"
failure = "0.1.5"
base64 = "0.10.1"
base58 = "0.1.0"

# with some hax
actix-multipart-rfc7578 = { git = "https://github.com/pkinsky/rust-multipart-rfc7578" }

serde_json = "1.0"

tracing = "0.1.8"
tracing-futures = "0.0.1-alpha.1"
tracing-subscriber = "0.1"