[package]
name = "dag-cache"
version = "0.1.0"
authors = ["pk <pkinsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
actix-web = "1.0.7"
# todo: revert back to old one
lru = { git = "https://github.com/pkinsky/lru-rs" }
serde = "1.0.19"
futures = "0.1"
failure = "0.1.5"
base64 = "0.10.1"
base58 = "0.1.0"
tokio = "0.1.22"

chashmap = "2.2"
hashbrown = "0.6.*"

# test only
rand = "0.7"

reqwest = "0.9"

serde_json = "1.0"

structopt = "0.2"

petgraph = "0.4.13"

tracing = "0.1.8"
tracing-futures = "0.0.1-alpha.1"
tracing-subscriber = "0.1"