[package]
name = "notes"
version = "0.1.0"
edition = "2018"

[dependencies]
strum = "0.13"
strum_macros = "0.13"
serde = "1"
serde_derive = "1"
yew = "0.10"
rand = { version = "0.7", features = ["stdweb"] }
dag-store-types = { path = "../../dag-store-types", features = ["minimal"] }
notes-types = { path = "../../notes-types" }
failure = "0.1.6"
stdweb = "0.4"
serde_json = "1.0"


# empty workspace
[workspace]