[package]
name = "notes"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = "1"
serde_derive = "1"
yew = { version = "0.14", features = ["std_web"] }
rand = { version = "0.7", features = ["stdweb"] }
dag-store-types = { path = "../../dag-store-types", features = ["minimal"] }
notes-types = { path = "../../notes-types" }
anyhow = "1.0"
stdweb = "0.4"

# empty workspace
[workspace]